-- Changes committed to source control since previous release
FEAT - Added the ability to provide a custom label for field objects within a saved sequence (allows re-numbering of players)
FIX - Fixed redraw issue when moving objects with movement lines enabled

0.2.1008 - Added new playing surfaces (Futsal and American football)
FEAT - Added FIFA Futsal pitch
FEAT - Added American football (NFL) field (players are a bit random and possibly labelled wrong -- need someone with expertise)
CHG - Relabelled sports to be more specific and add governing body designation related to field markings and layout

0.2.1007 - Added German translation, Floorball support, and automated playback. Fixes issues including XP SP3 install issue
FEAT - Added 20 triangular cones to the soccer field for documenting drills
FIX - Updated Saved Layout Information dialog to use labels of field objects instead of "tags"
FEAT - Added German translation of main user interface - translation courtesy of Ralph Rinschen
FEAT - Added Floorball field - code courtesy of Ulrich Jenzer
FEAT - Added support for "playing back" (or animating) the sequence - idea and some code courtesy of Ulrich Jenzer
FIX - Fixed installer on Windows XP SP3
CHG - Changed/added more icons in tool bar
FEAT - Added support for moving to the beginning or the end of a sequence

0.2.1005 - Various minor fixes and lots of build/release improvements
BUILD - Updated build environment to use more recent tools, Visual Studio 2008, .NET 3.5, Wix 3.0.4805.0, FxCop 1.36, and NAnt 0.86 Beta1
FIX - Exit menu item wasn't working. 
FIX - Fixed locating of installed documents and library files when installed using updated installers (that have bin folder).
BUILD - Added code analysis using FxCop to build process.
BUILD - Removed Votive project from solution to allow building solution without WiX.
BUILD - Added WiX build to NAnt build files, re-organized installer building slightly.